--- a/zluda/Cargo.toml
+++ b/zluda/Cargo.toml
@@ -11,6 +11,7 @@ name = "zluda"
 ptx = { path = "../ptx" }
 level_zero = { path = "../level_zero" }
 level_zero-sys = { path = "../level_zero-sys" }
+spirv_tools-sys = { path = "../spirv_tools-sys" }
 lazy_static = "1.4"
 num_enum = "0.4"
 lz4-sys = "1.9"
